    could be transferred to a remote. This happened when the file got deleted
    after the sync started running.
  * Warn when adding a annex symlink or pointer file that uses a key that
    is not known to the repository, to prevent confusion if the user has
    copied it from some other repository.
  * examinekey: Added two new format variables: objectpath and objectpointer

 -- Joey Hess <id@joeyh.name>  Mon, 09 Nov 2020 15:15:20 -0400

git-annex (8.20201103) upstream; urgency=medium

  * move: Improve resuming a move that was interrupted after the object
    was transferred, in cases where numcopies checks prevented the resumed
    move from dropping the object from the source repository.
  * When a special remote has chunking enabled, but no chunk sizes are
    recorded (or the recorded ones are not found), speculatively try
    chunks using the configured chunk size.
  * Fixed some problems that prevented this command from working:
    git submodule foreach git annex init
  * Improve shutdown process for external special remotes and external
    backends. Make sure to relay any remaining stderr from the process,
    and potentially avoid the process getting a SIGPIPE if it writes to
    stderr too late.
  * Fix a bug that prevented linux standalone bundle from working on a fresh
    install.
  * Windows build changed to one done by the datalad-extensions project
    using Github actions.
  * Windows build now includes libmagic, so mimetype and mimeencoding
    will work.
    Thanks to John Thorvald Wodder II and Yaroslav Halchenko for their work
    on this.
  * view: Avoid using ':' from metadata when generating a view, because
    it's a special character on Windows ("c:")
  * Fix a memory leak introduced in the last release.
  * add, import: Fix a reversion in 7.20191009 that broke handling
    of --largerthan and --smallerthan.
  * view: Fix a reversion in 8.20200522 that broke entering or changing views.
  * Fix build on Windows with network-3.